# economista_inteligente

./: GARCH.py  GARCH_trainer.py  README.md  asistente_direccion.py  clasificador_NLP.py  director.py  ejercicio 16.ipynb  main.py  noticias.json  prueba_modelo_finales.py  pruebas_frausto.py  pyproject.toml
app/: README.md  funciones_rendimiento.py  prueba.py
app/fundamental_model/: load_noticias.py  rating_model.py
app/modelo_fundamental/: __init__.py  cliente_clasificador.py  get_noticias.py  modelo_clasificador.py  pruebas_newsapi.py
app/modelo_lenguaje/: README.md
app/modelo_lenguaje/analizador/: README.md
app/modelo_lenguaje/extractor/: README.md
app/modelo_matematico/: README.md  __init__.py  funciones_aplicadas.py  funciones_rendimiento.py
data/parquets_finanzas/: noticias_AAPL.parquet  noticias_AMD.parquet  noticias_AMZN.parquet  noticias_ASML.parquet  noticias_AVGO.parquet  noticias_BABA.parquet  noticias_CSCO.parquet  noticias_GOOGL.parquet  noticias_IBM.parquet  noticias_META.parquet  noticias_MSFT.parquet  noticias_NFLX.parquet  noticias_NVDA.parquet  noticias_ORCL.parquet  noticias_PLTR.parquet  noticias_SAP.parquet  noticias_TCEHY.parquet  noticias_TSLA.parquet  noticias_TSM.parquet
garch_models/: AAPL_garch.pkl  AMD_garch.pkl  AMZN_garch.pkl  ASML_garch.pkl  AVGO_garch.pkl  BABA_garch.pkl  CSCO_garch.pkl  GOOGL_garch.pkl  IBM_garch.pkl  META_garch.pkl  MSFT_garch.pkl  NFLX_garch.pkl  NVDA_garch.pkl  ORCL_garch.pkl  PLTR_garch.pkl  SAP_garch.pkl  TCEHY_garch.pkl  TSLA_garch.pkl  TSM_garch.pkl  garch_summary.csv
