[project]
name = "economista-inteligente"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "arch>=7.2.0",
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "transformers[torch]>=4.44",
    "wordcloud>=1.9.4",
]
